contacts (todo remove qr)

--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,6 @@
 :root {
   --main-bg-color: #efefef;
+  --default-content-color: #333333;
   --top-block-background-color: #3e2216;
   --main-title-color: #f95500;
   --main-subtitle-color: #201e1f;
