--- a/css/template_styles.css
+++ b/css/template_styles.css
@@ -727,4 +727,20 @@ div.scrollup:hover {
     height: 100%;
 }    
 
-.contacts-map { width: 600px; height:450px; }
+
+
+
+
+.map-container-4{
+	overflow:hidden;
+	padding-bottom:56.25%;
+	position:relative;
+	height:0;
+}
+.map-container-4 iframe{
+	left:0;
+	top:0;
+	height:100%;
+	width:100%;
+	position:absolute;
+}
