--- a/css/common.css
+++ b/css/common.css
@@ -7,6 +7,7 @@
   --logo-background-color: #f45200; /* возможно не понадобится. сейчас лого - это изображение */
   --main-active-ref-color: #f95500;
   --button-background-color:#f95500;
+  --catalog-background-color: #f2eeef;  
   --odd-block-background-color: #f2eeef;
   --even-block-background-color: #d9d5d6;
   --catalog-item-border-color: #c4bebe;
