--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,75 +1,3 @@
-/**/
-/* Экстрамалые девайсы («телефоны», < 576px)*/
-@media (max-width: 575.98px) { 
-/*	.catalog-top-list-block .catalog-item .item-img {
-		width: 250px;
-		height: 166px;
-		border: 1px red solid;
-	}
-
-
-	.catalog-top-list-block .catalog-item .item-img img {
-		display: block;
-		width: 50px;
-		height: 50px;
-	}
-
-*/
-
-
-}
-
-/* Малые девайсы («ландшафтные», < 768px)*/
-@media (max-width: 767.98px) { 
-/*	.catalog-top-list-block .catalog-item .item-img {
-		width: 50px;
-		height: 50px;
-		border: 1px red solid;
-	}
-
-
-	.catalog-top-list-block .catalog-item .item-img img {
-		display: block;
-		width: 50px;
-		height: 50px;
-	}
-*/
-
-
-}
-
-/* Средние девайсы («таблетки», < 992px) */
-@media (max-width: 991.98px) { 
-/*.catalog-top-list-block .catalog-item .item-img {
-	width: 100%;
-	height: 160px;
-	border: 1px red solid;
-}
-
-
-.catalog-top-list-block .catalog-item .item-img img {
-    display: block;
-	width: 100%;
-	height: auto;
-}
-
-.catalog-top-list-block .catalog-item h2 {
-	font-size: 1.3em !important;
-	line-height: 1.3em !important;
-} */
-}
-
-/* Большие девайсы (большие десктопы, < 1200px)*/
-@media (max-width: 1199.98px) { 
-
-}
-
-
-/*// Экстрамалые девайсы («портретные телефоны», < 576px) */
-@media (max-width: 575.98px) { 
-
-}
-
 
 
 
@@ -79,11 +7,7 @@
 /* // Большие девайсы (большие десктопы, >= 992px) */
 
 @media (max-width: 320px) { 
-	span.item-name {
-		color: red;
-		font-size: 9px;
-		line-height: 1.5;
-	}
+	span.item-name {  font-size: 8px; line-height: 1.5; }
 }
 
 
@@ -120,7 +44,7 @@
 	
 	.page-content-block img { max-width: 100%; height: auto; }	
 	
-	.head-top-block .head-spacer {
+	.head-top-block .head-spacer { 
 		height: 51px;
 		width: auto;
 		margin: 0 auto;
@@ -146,82 +70,37 @@
 	.gps-button {display: block;}		
 
 
-.catalog-container .catalog-item {
-	line-height: normal;
-}
+	.catalog-container .catalog-item { line-height: normal; padding: 0px; margin-bottom: 5px; }
 
 	.catalog-container .catalog-item .item-img {
-    width: 80px;
-    height: 55px;
-    border: solid 1px #FFFFFF;
-    margin: 0 10px 0 0;
-    vertical-align: middle;
-}
+	    width: 100px;
+	    height: 80px;
+	    border: solid 1px #FFFFFF;
+	    margin-right: 5px;
+	    vertical-align: middle;
+	}
 
+	.catalog-container .catalog-item h2 { font-size: 12px !important; line-height: 16px !important; }
 
-.catalog-container .catalog-item h2 {
-    font-size: 12px !important;
-    line-height: 16px !important;
+	.catalog-container .catalog-item h2 a {
+	    border: solid 1px #f7f3f4;
+	    display: block;
+	    padding: 0;
+	    color: #6b6768;
+	    margin: 0;
+	    text-decoration: none;
+	    background-color: #f2eeef;
+	    vertical-align: middle;
+	    cursor: pointer;
+	    height: 100%;
+	}
 
-}
+	.catalog-container .catalog-item .item-name:first-line { font-weight: normal; font-size: 5px; }
 
-.catalog-container .catalog-item h2 a {
-    border: solid 1px #f7f3f4;
-    display: block;
-    padding: 7px 8px;
-    color: #6b6768;
-    margin: 0;
-    text-decoration: none;
-    background-color: #f2eeef;
-    vertical-align: middle;
-    cursor: pointer;
-    height: 100%;
-}
+	.catalog-container .catalog-item .item-name { width: 100%; vertical-align: top; }
 
+	.catalog-cell { background-color: var(--catalog-background-color); border: 1px var(--catalog-item-border-color) solid; }		
 
-.catalog-container .catalog-item .item-name {
-    width: 100%;
-    vertical-align: top;
-}
-
-	.catalog-cell {
-		background-color: var(--catalog-background-color);
-		border: 1px var(--catalog-item-border-color) solid;
-}		
-
-/*  TODO:  4 vertical;
-.catalog-container .catalog-item h2 {
-    font-size: 12px !important;
-    line-height: 16px !important;
-    font-family: Arial, Tahoma, Helvetica, Verdana, sans-serif !important;
-    text-transform: none !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    color: #6b6768 !important;
-    vertical-align: middle;
-}
-.catalog-container .catalog-item h2 a {
-    border: solid 1px #f7f3f4;
-    display: block;
-    padding: 7px 8px;
-    color: #6b6768;
-    margin: 0;
-    text-decoration: none;
-    background-color: #f2eeef;
-    vertical-align: middle;
-    cursor: pointer;
-    height: 100%;
-}
-
-.catalog-container .catalog-item .item-img {
-    width: 124px;
-    height: 83px;
-    border: solid 1px #FFFFFF;
-    margin: 0 10px 0 0;
-    vertical-align: middle;
-}
-
-*/
 
 
 }
@@ -244,60 +123,88 @@
 
 	}
 
-/*	160 120*/
 
-/*
-	.catalog-container .catalog-item .item-img { width: 100px; height: 75px; }
-	 .catalog-container .catalog-item h2 { font-size: 8px !important; line-height: 8px !important; }
-
-*/
-
-.catalog-container .catalog-item .item-img {
-    width: 90px;
-    height: 75px;
-    border: solid 1px #FFFFFF;
-    margin: 0 5px 0 0;
-    vertical-align: middle;
+.catalog-container {
+	width: 100%;
+	margin: 18px 0 0 0;
 }
 
-
+.catalog-container .catalog-item {
+	border: solid 1px #c4bebe;
+	border-top: none;
+	vertical-align: top;
+	padding: 0;
+	line-height: normal;
+}
 
 .catalog-container .catalog-item h2 {
-    font-size: 12px !important;
-    line-height: 16px !important;
-
+	font-size: 12px !important;
+	line-height: 16px !important;
+	font-family: Arial, Tahoma, Helvetica, Verdana, sans-serif !important;
+	text-transform: none !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	color: #6b6768 !important;
+	vertical-align: middle;
 }
 
 .catalog-container .catalog-item h2 a {
-    border: solid 1px #f7f3f4;
-    display: block;
-    padding: 7px 8px;
-    color: #6b6768;
-    margin: 0;
-    text-decoration: none;
-    background-color: #f2eeef;
-    vertical-align: middle;
-    cursor: pointer;
-    height: 100%;
+	border: solid 1px #f7f3f4;
+	display: block;
+	padding: 0px;
+	color: #6b6768;
+	margin: 0;
+	text-decoration: none;
+	background-color: #f2eeef;
+	vertical-align: middle;
+	cursor: pointer;
+	height: 100%;
 }
 
+.catalog-cell { height: auto; }
 
+.catalog-container .catalog-item .item-img {
+	width: 100px;
+	height: 67px;
 
+	border: solid 1px #FFFFFF;
+	margin-right: 5px;
+	vertical-align: middle;
+}
+
+.catalog-container .catalog-item .item-img img {
+	display: block;
+}
 
 .catalog-container .catalog-item .item-name {
-    width: 100%;
-    vertical-align: top;
+	width: 100%;
+	vertical-align: top;
 }
 
+.catalog-container .catalog-item .item-name:first-line {
+	font-weight: normal;
+	font-size: 5px;
+}
 
-	.copyright-block-production , .bottom-menu-block{ display: none;}
+.catalog-container .catalog-item h2 a:hover {
+	color: #f95500 !important;
+	background-color: #2c2829;
+	border: solid 1px #2c2829;
+}
+
+.catalog-container .catalog-item h2 a:hover .item-name:first-line {
+	color: #FFFFFF;
+}
+
+/**/
+
+
+
+
+.copyright-block-production , .bottom-menu-block{ display: none;}
+.aside-item  { height: 100px; }
+
 	
-
-	.aside-item  { height: 100px; }
-
-	
-
-
 	.navbar { display: block;} 
 	.top-menu-box ul.top-menu li.top-menu-item .item-href, .top-menu-box ul.top-menu li.top-menu-item .item-no-href {  display: none; }
 	.page-content-block .top-promo-block { padding: 0 0 10px 0; 	}
@@ -332,25 +239,7 @@
 		
 	.gps-button {display: block;}		
 
-	.catalog-cell {
-		background-color: var(--catalog-background-color);
-		border: 1px var(--catalog-item-border-color) solid;
-		height: 110px;
-	}
 
-
-		  /*  FUCK */
-/*
-
-iPhone eXpensive landscape · width: 734px
-Android (Pixel 2) landscape · width: 684px
-iPhone 6-8 landscape · width: 667px
-iPhone 6-8 Plump landscape · width: 736px
-------------------
-iPad portrait · width: 768px - OK
-
-
-*/
 
 
 }
