cataloog-ok todo catalog-data

--- a/css/common.css
+++ b/css/common.css
@@ -17,4 +17,5 @@
   --top-menu-separate-color: #131112;
   --top-menu-active-color: #ff510a;
   --footer-background-color: #f2eeef;	
+  --light-gray-color: #f2eeef;
 }
