--- a/css/responsive.css
+++ b/css/responsive.css
@@ -129,7 +129,32 @@
 	.catalog-cell { background-color: var(--catalog-background-color); border: 1px var(--catalog-item-border-color) solid; }		
 
 	.qr-code-button {display:none;}
+	
+	/* product */
+	table.table th p {
+		writing-mode: vertical-rl
+	}
+	table.table th {
+		font-size: 1em;
+		font-weight: normal;
+	}
 
+	.add_form-block-fix form {
+		width: 300px;
+		background:  lightblue;
+	}
+
+	.table.add-table {
+		width: 300px;
+	}
+
+.add_form-block-fix textarea {
+    width: 50px;
+    height: 50px;
+    max-width: 50px;
+	}
+
+	
 }
 
 
@@ -246,6 +271,13 @@
 
 	.qr-code-button {display:none;}
 
+	/* product */
+
+	.product-container table.table th {
+		padding: 0px;
+		font-weight: normal;
+		font-size: 0.95em;
+	}
 
 }
 
