--- a/css/template_styles.css
+++ b/css/template_styles.css
@@ -728,3 +728,72 @@ div.scrollup:hover {
 	display: block;
 	margin: -40px auto 0px;
 }
+
+/* product list block */
+.product-list-block-pad {
+	display: block;
+	margin: 0 0 12px 0px;	
+	padding: 16px;
+	background-color: #f2eeef;
+	background-image: url('images/met-bg.jpg');
+	background-position: 50% 50%;
+	border: solid 1px #d9d5d6;	
+}
+
+.product-list-block-pad .menu-title {
+	text-transform: uppercase;
+	color: #201e1f;
+	font-family: Impact, Charcoal, sans-serif;
+	font-size: 26px;
+	line-height: 28px;
+	padding: 0;
+	margin: 0;
+}
+
+.product-list-block-pad ul.right-menu {
+	display: block;
+	list-style: none !important;
+	padding: 0 !important;
+	margin: 0 !important;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.product-list-block-pad ul.right-menu li.right-menu-item {
+	padding: 0 0 0 15px !important;
+	margin: 0 !important;
+	text-align: left;
+	background-image: url('images/bullet.png');
+	background-position: 0 4px;
+	background-repeat: no-repeat;
+}
+
+.product-list-block-pad ul.right-menu li.right-menu-item-sep {
+	font-size: 10px;
+	line-height: 10px;
+	margin: 0;
+	padding: 0;
+}
+/*
+.product-list-block-pad ul.right-menu li.right-menu-item,
+.product-list-block-pad ul.right-menu li.right-menu-item a,
+.product-list-block-pad ul.right-menu li.right-menu-item .item-href,
+.product-list-block-pad ul.right-menu li.right-menu-item .item-no-href {
+	color: #006699 !important;
+}
+
+.product-list-block-pad ul.right-menu li.right-menu-item.item-active,
+.product-list-block-pad ul.right-menu li.right-menu-item.item-active a,
+.product-list-block-pad ul.right-menu li.right-menu-item.item-active .item-href,
+.product-list-block-pad ul.right-menu li.right-menu-item.item-active .item-no-href {
+	color: #f95500 !important;
+	text-decoration: none;
+}
+
+.product-list-block-pad ul.right-menu li.right-menu-item:hover,
+.product-list-block-pad ul.right-menu li.right-menu-item a:hover,
+.product-list-block-pad ul.right-menu li.right-menu-item .item-href:hover,
+.product-list-block-pad ul.right-menu li.right-menu-item .item-no-href:hover {
+	color: #f95500 !important;
+}
+*/
