--- a/css/stylize.css
+++ b/css/stylize.css
@@ -275,11 +275,15 @@ input.password {
 	font-weight: normal;
 	padding: 7px 3px 6px 3px;
 	margin: 0;
+	
+	/*
 	background-color: transparent;
+	
 	background-image: url('images/uniform/sprite-new.png');
 	background-repeat: repeat-x;
 	background-position: 100% -988px;
 	outline: 0;
+	*/
 	border: solid 1px #d9d9d9;
 	border-radius: 3px;
 }
@@ -289,10 +293,11 @@ textarea.uniform {
 	line-height: 16px;
 	font-weight: normal;
 	padding: 7px 7px;
-	background-color: #FFFFFF;
+/*	background-color: #FFFFFF;
 	background-image: url('images/uniform/sprite-new.png');
 	background-repeat: repeat-x;
 	background-position: 0px -988px;
+	*/
 	outline: 0;
 	margin: 2px 0 0 0;
 
