--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,24 @@
 	padding: 0 !important;
 }
 
+
+
 .home-page-block .feedback {
 	font-weight: normal;
 	font-size: 13px;
 	line-height: 21px;
 	margin: 25px 0 0 0 !important;
+	padding: 0 !important;
+}
+
+
+.home-page-block .tel a {
+    text-decoration: none;
+	color: #f95500;
+	font-weight: bold;
+	font-size: 15px;
+	line-height: 21px;
+	margin: 0 0 7px 0 !important;
 	padding: 0 !important;
 }
 
