--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@
 	width: 124px;
 	height: 83px;
 
-	border: solid 1px #FFFFFF;
+/*	border: solid 1px #FFFFFF;*/
 	margin: 0 10px 0 0;
 	vertical-align: middle;
 }
