rew submenu  product.form === feedback.form

--- a/css/template_styles.css
+++ b/css/template_styles.css
@@ -649,6 +649,10 @@ div.scrollup:hover {
 .qr-code-container {
 	display:block;
 }
+
+
+.order-product-form h2 { color: var(--main-title-color); }
+
 /*hamburger menu*/
 
 /*.mobile-container {
