--- a/css/common.css
+++ b/css/common.css
@@ -18,4 +18,6 @@
   --top-menu-active-color: #ff510a;
   --footer-background-color: #f2eeef;	
   --light-gray-color: #f2eeef;
+  --label-color: black;
+
 }
